# gate_fusion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: labels.txt
config/flightgoggles/: config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
config/flightgoggles_yolo/: config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
config/orin16/: cam_imu-camchain-imucam.yaml  cam_imu-imu.yaml  config.yaml  imu_cam-camchain-imucam.yaml  imu_cam-imu.yaml
include/gate_fusion/: ESKF.hpp  GateSimROS.hpp  GateYoloROS.hpp  Pipeline.hpp  pencil_filter.hpp  yolo_viz.hpp
include/gate_fusion/utils/: rotation.hpp
include/gate_fusion/yolo/core/: core.h  macro.h  tensor.h  types.h
include/gate_fusion/yolo/utils/: utils.h
include/gate_fusion/yolo/vision/: cudaWarp.cu  cudaWarp.h  detection.h  result.h
launch/: gate_sim.launch  gate_yolo.launch  pencil_filter.launch  republish_raw.launch  usb_camera.launch  vio.launch  yolo_viz.launch
msg/: BoundingBox.msg  Keypoint.msg  YoloPose.msg  YoloPoseArray.msg
scripts/yolov8-pose/export/: README.md  export_onnx.py  head.py
scripts/yolov8-pose/train/: apply_pencil_filter.py  train.py
src/: ESKF.cpp  GateSimROS.cpp  Pipeline.cpp  gate_map_publisher.cpp  gate_sim_node.cpp  pencil_filter.cpp  pencil_filter_node.cpp
src/eskf/: ESKF.cpp
src/gate_sim/: GateSimROS.cpp
src/gate_yolo/: GateYoloROS.cpp  gate_yolo_node.cpp
src/pencil_filter/: pencil_filter_node.cpp
src/pipeline/: Pipeline.cpp
src/viz/: yolo_viz.cpp  yolo_viz_node.cpp
src/yolo/core/: core.cpp  tensor.cpp  types.cpp
src/yolo/utils/: utils.cpp
src/yolo/vision/: detection.cpp
