<?xml version="1.0"?>
<package format="2">
  <name>gate_fusion</name>
  <version>1.0.0</version>
  <description>VIO drift corrector using drone racing gates.</description>

  <maintainer email="i.lin@mail.utoronto.ca">Yifan Lin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>flightgoggles</depend>
  <depend>drolib</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>tf</depend>

  <depend>eigen</depend>
  <depend>libopencv-dev</depend>
  <depend>nvidia-cuda</depend>
  <depend>yaml-cpp</depend>
  
</package>
